@@ -15,6 +15,7 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
+ o the CURLFTPSSL_CONTROL setting for CURLOPT_FTP_SSL is acknowledged
  o "SSL: couldn't set callback" is now a less serious problem
  o Interix build fix
  o fixed "hang" when out of file handles at start
@@ -27,6 +28,6 @@ Other curl-related news since the previous public release:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Gisle Vanem, Dan Fandrich, Thomas Klausner, Todd Vierling
+ Gisle Vanem, Dan Fandrich, Thomas Klausner, Todd Vierling, Peter Heuchert
 
         Thanks! (and sorry if I forgot to mention someone)
